# stream-controller

./: .devcontainer.json  .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml  readme.txt  requirements.txt
docker/: get-ffmpeg.txt  gunicorn.conf.py  nginx.conf  start.sh  supervisord.conf.dev  supervisord.conf.docker
streamplayer/: manage.py
streamplayer/ffmpcontrol/: player.py  stream.py
streamplayer/player/: admin.py  apps.py  forms.py  models.py  opensubtitles.py  urls.py  views.py
streamplayer/player/migrations/: 0001_initial.py  0002_playlist_next_film.py  0003_remove_playlist_films_playlistfilm.py  0004_playlist_films.py  0005_alter_stream_options_stream_order.py  0006_remove_playlist_active_film_and_more.py  0007_auto_20220424_1149.py  0008_film_font_size.py  0009_film_videodata_alter_film_subtitle_and_more.py  0010_filmstream_film_audio_stream_film_subtitle_stream.py  0011_auto_20221202_1719.py  0012_auto_20230129_0203.py  0013_streamsetting_audio_channels.py  0014_auto_20230129_0346.py  0015_film_volume_normalization.py  0016_auto_20230129_0426.py  0017_auto_20230302_1122.py  0018_playlist_for_guild_movie_alter_film_font_size_and_more.py  0019_alter_film_subtitle.py  0020_filmstream_special.py  0021_remove_filmstream_special_film_special.py  0022_film_status.py  0023_add_autostart_playlist.py
streamplayer/player/static/: dark-theme.css
streamplayer/player/templates/: base.html
streamplayer/streamplayer/: BigChunkUploadHandler.py  adapters.py  asgi.py  settings.py  urls.py  wsgi.py
(+15 files in other folders)
